--- a/backend/APP/template.yaml
+++ b/backend/APP/template.yaml
@@ -26,8 +26,8 @@ Parameters:
 Mappings:
   EnvironmentMap:
     dev:
-      LINEOAChannelId: LINEOAChannelId
-      LIFFChannelId: LIFFChannelId
+      LINEOAChannelId: 1657469583
+      LIFFChannelId: 1657465599
       HairSalonShopMasterDBName: HairSalonShopMaster
       HairSalonReservationInfoDBName: HairSalonReservationInfo
       HairSalonStaffReservationDBName: HairSalonStaffReservation
@@ -35,23 +35,23 @@ Mappings:
       MessageTable: LineRemindMessage
       # RemindDateDifference -> Negative value if the day before the day of the reservation(ex: A day ago -> -1)
       RemindDateDifference: -1
-      FrontS3BucketName: S3Bucket Name
-      LayerVersion: Layer Version
+      FrontS3BucketName: liff.sample-app
+      LayerVersion: 1
       LoggerLevel: DEBUG
-      LambdaMemorySize: 128 to 3008
+      LambdaMemorySize: 128
       # TTL is True:Reservation Data will be deleted at the specified date, False:Data will not be deleted
       TTL: False
       # Set day to delete data
       # If you set TTL: True, data will be deleted in the period specified below.
       # Even if you set TTL: False, please set int value.
-      TTLDay: Data Delete DayA
+      TTLDay: 7
       # ### ACCESS LOG SETTING ###
       # LogS3Bucket: S3BucketName for AccessLog
       # LogFilePrefix: hair-salon-sample/
       # ### ACCESS LOG SETTING ###
     prod:
-      LINEOAChannelId: OAChannelId
-      LIFFChannelId: LIFFChannelId
+      LINEOAChannelId: 1657469583
+      LIFFChannelId: 1657465599
       HairSalonShopMasterDBName: HairSalonShopMasterDBName
       HairSalonReservationInfoDBName: HairSalonReservationInfoDBName
       HairSalonStaffReservationDBName: HairSalonStaffReservationDBName
@@ -59,12 +59,12 @@ Mappings:
       MessageTable: MessageTableDBName
       # RemindDateDifference -> Negative value if the day before the day of the reservation(ex: A day ago -> -1)
       RemindDateDifference: -1
-      FrontS3BucketName: S3Bucket Name
-      LayerVersion: Layer Version
-      LoggerLevel: INFO or DEBUG
-      LambdaMemorySize: 128 to 3008
-      TTL: False or True
-      TTLDay: Data Delete Day
+      FrontS3BucketName: liff.sample-app
+      LayerVersion: 1
+      LoggerLevel: INFO
+      LambdaMemorySize: 128
+      TTL: False
+      TTLDay: 7
       # ### ACCESS LOG SETTING ###
       # LogS3Bucket: S3BucketName for AccessLog
       # LogFilePrefix: hair-salon-sample/
