--- a/backend/Layer/samconfig.toml
+++ b/backend/Layer/samconfig.toml
@@ -5,4 +5,10 @@ version = 0.1
 region = "ap-northeast-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Environment=\"dev\""
+stack_name = "liff-app-layer"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1r9jkp1vwkgl2"
+s3_prefix = "liff-app-layer"
+confirm_changeset = true
+disable_rollback = true
+image_repositories = []
 
