--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@aws-amplify/ui-vue": "0.2.12",
+        "@line/liff": "^2.21.1",
         "@nuxt/babel-preset-app": "^2.15.8",
         "@nuxt/webpack": "^2.15.8",
         "@nuxtjs/axios": "5.11.0",
@@ -18,12 +19,12 @@
         "aws-amplify": "3.0.22",
         "aws-amplify-vue": "2.1.2",
         "babel-loader": "^8.2.5",
+        "fibers": "^4.0.1",
         "nuxt": "2.13.3",
-        "vue-i18n": "8.22.2",
-        "webpack": "^4.45.0",
-        "sass-loader": "^7.2.0",
         "sass": "^1.22.10",
-        "fibers": "^4.0.1"
+        "sass-loader": "^7.2.0",
+        "vue-i18n": "8.22.2",
+        "webpack": "^4.45.0"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "5.14.0",
@@ -38,9 +39,7 @@
         "eslint-plugin-vue": "9.4.0",
         "font-awesome": "4.7.0",
         "material-design-icons-iconfont": "5.0.1",
-
         "vuedraggable": "2.24.1",
         "vuex-persistedstate": "3.0.1"
-        
     }
 }
