--- a/amplify-vue-album/package.json
+++ b/amplify-vue-album/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.6",
+    "aws-amplify": "^4.3.35",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
